SPCTR-1794 Post Carousel - Fixed taxonomy tag spacing for frontend

--- a/src/blocks/post/style.scss
+++ b/src/blocks/post/style.scss
@@ -350,6 +350,12 @@
 	ul.slick-dots {
 		transform: unset;
 	}
+
+	article.uagb-post__inner-wrap .uagb-post__text.uagb-post__taxonomy:not(.highlighted) {
+		margin-left: unset;
+		margin-right: unset;
+		margin-top: unset;
+	}
 }
 
 .uagb-post-grid[data-equal-height="yes"] .uagb-post__inner-wrap {
